# VulkanEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile.bat
JvscEngine/: CMakeLists.txt
JvscEngine/src/: first_app.cpp  first_app.hpp  jvsc_game_object.hpp  jvsc_mesh.cpp  jvsc_mesh.hpp  jvsc_pipeline.cpp  jvsc_pipeline.hpp  jvsc_renderer.cpp  jvsc_renderer.hpp  jvsc_window.cpp  jvsc_window.hpp  main.cpp
JvscEngine/src/shaders/: simple_shader.frag  simple_shader.vert
JvscEngine/src/systems/: gravity_physics_system.hpp  simple_render_system.cpp  simple_render_system.hpp  vec2_field_system.hpp
assets/shaders/: default.frag  default.vert
assets/shaders/spirv/: default_vert.spv
src/: main.cpp  pch.h  vk_camera.cpp  vk_camera.h  vk_mesh.cpp  vk_mesh.h  vk_renderer.cpp  vk_renderer.h
